--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tuto
 Type: Package
-Title: What the Package Does (Title Case)
+Title: test pull request(Title Case)
 Version: 0.1.0
 Author: Who wrote it
 Maintainer: The package maintainer <mariangela.arca@external.engie.com>
